@@ -66,10 +66,8 @@ is(
             'if ( prime == 3 ) {',
             'result = true;',
             '}',
-            'else {',
-            'if ( prime != 42 ) {',
+            'else if ( prime != 42 ) {',
             'result = false;',
-            '}',
             '}',
         ],
     ],
